# ai-radar

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml  run_backend.sh
.clawhub/: lock.json
backend/app/: auth.py  config.py  db.py  main.py  models.py  repositories.py
backend/app/routers/: auth.py  chat.py  evaluations.py  graph.py  projects.py  settings.py  shares.py  trials.py
backend/app/services/: ai_chat.py  classifier.py  graph_builder.py  ixauth.py  llm_analyzer.py  markdown_export.py  project_filter.py  project_scorer.py  sync.py  (+1 more)
config/: filters.yaml  keywords.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: init_db.py  refresh_projects.py  seed_baseline_projects.py  seed_demo_data.py  smoke_test.py  update_metadata.py
src/: app.py  config.py  db.py  models.py  repositories.py
src/pages/: chat.py  knowledge_graph.py  login.py  radar.py  settings.py  shares.py  trials.py
src/services/: ai_chat.py  classifier.py  graph_builder.py  ixauth.py  llm_analyzer.py  markdown_export.py  project_filter.py  project_scorer.py  state_machine.py
src/sources/: baseline_sources.py  external_sources.py  github_search.py  github_trending.py  manual_entry.py
static/: style.css
tests/: test_filtering.py  test_github_trending.py  test_graph_builder.py  test_knowledge_graph.py  test_markdown_export.py  test_mvp_flow.py  test_radar.py  test_shares.py  test_sources.py  test_state_machine.py  test_trials.py
(+19 files in other folders)
