[project]
name = "ai-radar"
version = "0.1.0"
description = "AI open-source project radar and team technology absorption system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.2.1",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "sqlmodel>=0.0.16",
    "streamlit>=1.33.0",
    "streamlit-agraph>=0.0.45",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

