[project]
name = "ai-radar"
version = "0.1.0"
description = "AI open-source project radar and team technology absorption system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.2.1",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "sqlmodel>=0.0.16",
    # FastAPI backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
    # Legacy Streamlit (to be removed after migration)
    "streamlit>=1.33.0",
    "streamlit-agraph>=0.0.45",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

